Prevent Overlays Covering Content

--- a/Portal.CMS.Web/Content/Styles/Framework/framework-helpers.css
+++ b/Portal.CMS.Web/Content/Styles/Framework/framework-helpers.css
@@ -9,7 +9,7 @@
 
 .overlay
 {
-    z-index: 1;
+    z-index: 1 !important;
     position: absolute !important;
     top: 0;
     left: 0;
